[metadata]
name = exchange_lib_Rozhankivskij
version = 0.0.1
author = DanyRz
author_email = dany@mail.com
description = A small library for currency exchange rates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanyRz/HW_021_basic_lib
project_urls =
    Bug Tracker = https://github.com/DanyRz/HW_021_basic_lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
